Change CSS to single file and fix stretched actor images

--- a/src/sass/actors/actorSheet.sass
+++ b/src/sass/actors/actorSheet.sass
@@ -22,6 +22,7 @@
   .sheet-header
 
     .profile-img
+      align-self: start
       max-height: 200px
 
     .actor-info
